[tool.poetry]
name = "cipher_sc5119"
version = "0.1.0"
description = "QMSS MDS HW 7"
authors = ["Saira Chawla"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
